--- a/Manitoba/test.ipynb
+++ b/Manitoba/test.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "28680ec2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "# from sklearn.metrics import r2_score, mean_squared_error\n",
-    "# from sklearn.linear_model import LinearRegression"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "8001b56d",
    "metadata": {},
    "outputs": [
@@ -165,7 +162,7 @@
        "4  52.5  0.0              0.0         0.0   0.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "b02a7e7b",
    "metadata": {},
    "outputs": [
@@ -302,7 +299,7 @@
        "4   535.0       0.184  1  1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +772,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
