some data adjust

--- a/Manitoba/data_process.ipynb
+++ b/Manitoba/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 160,
    "id": "42f58525",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 161,
    "id": "484e6aac",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "4   535.0       0.184  1  1  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 162,
    "id": "d4b054e2",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "4 -1.370000e-10  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,11 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "id": "4baa6be7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "YEARS = range(1996, 2012) # 1996–2011\n",
     "LAST5 = list(range(2007, 2012))             # 2007–2011\n",
     "\n",
     "def normalize_yields_per_crop(y):\n",
@@ -316,16 +317,23 @@
     "    based on its maximal yield in 1996–2011\n",
     "    \"\"\"\n",
     "    y = y.copy()\n",
-    "    def rescale(s):\n",
-    "        return s / s.max() if s.max() != 0 else 0.0\n",
-    "    y[\"YieldNorm\"] = y.groupby(\"Crop\", group_keys=False)[\"Yield/Acre\"].apply(rescale)\n",
+    "    y[\"Yield/Acre\"] = pd.to_numeric(y[\"Yield/Acre\"], errors=\"coerce\")\n",
+    "    # filter to study window before computing mins/maxs (as per paper)\n",
+    "    y = y[y[\"Year\"].between(min(YEARS), max(YEARS))]\n",
+    "    \n",
+    "    g = y.groupby(\"Crop\")[\"Yield/Acre\"]\n",
+    "    mins = g.transform(\"min\")\n",
+    "    maxs = g.transform(\"max\")\n",
+    "    rng  = maxs - mins\n",
+    "    # vectorized, stays aligned; sets 0 when rng == 0\n",
+    "    y[\"YieldNorm\"] = np.where(rng != 0, (y[\"Yield/Acre\"] - mins) / rng, 0.0)\n",
     "    return y\n",
     "\n",
     "\n",
     "def compute_recent5_weights(y, last5=LAST5):\n",
     "    \"\"\"\n",
-    "    Acreage shares per Municipality and Crop over the last 5 years (e.g., 2007–2011).\n",
-    "    Shares sum to 1 within each municipality.\n",
+    "    We aggregate yields for a crop mix that is representative of the recent five years for each municipality.\n",
+    "    The mix includes all varieties for each crop in the mix.\n",
     "    \"\"\"\n",
     "    w = (y[y[\"Year\"].isin(last5)]\n",
     "         .groupby([\"Municipality\", \"Crop\"], as_index=False)[\"Acres\"].sum())\n",
@@ -339,30 +347,79 @@
     "    muni_totals = w.groupby(\"Municipality\")[\"Acres\"].transform(\"sum\")\n",
     "    w[\"Weight\"] = w[\"Acres\"] / muni_totals\n",
     "\n",
-    "    # Optional: re-normalize inside each municipality to guard against fp drift\n",
+    "    # Re-normalize inside each municipality to guard against fp drift\n",
     "    w[\"Weight\"] = w.groupby(\"Municipality\")[\"Weight\"].transform(lambda s: s / s.sum())\n",
     "\n",
     "    return w[[\"Municipality\", \"Crop\", \"Weight\"]].copy()\n",
     "\n",
+    "# def build_portfolio_yield(y_norm, weights):\n",
+    "#     \"\"\"\n",
+    "#     To make yield risks comparable across crops, we first normalize yields for each crop over 1996–2011.\n",
+    "#     We then build, for every municipality, a representative crop-mix yield that uses a fixed set of acreage weights based on the most recent five years.\n",
+    "#     The mix includes all varieties within each crop.\n",
+    "#     \"\"\"\n",
+    "#     \"\"\"\n",
+    "#     Portfolio yield for every Municipality and Year:\n",
+    "#     Y^{mix}_{i,t} = sum_c w_{i,c} * y'_{i,t,c}\n",
+    "#     where y' is min–max normalized per Crop and w_{i,c} are the 5-year acreage shares.\n",
+    "#     \"\"\"\n",
+    "#     m = y_norm.merge(weights, on=[\"Municipality\",\"Crop\"], how=\"inner\")\n",
+    "#     port = (m.assign(weighted=lambda df: df[\"YieldNorm\"] * df[\"Weight\"])\n",
+    "#               .groupby([\"Municipality\",\"Year\"], as_index=False)[\"weighted\"].sum()\n",
+    "#               .rename(columns={\"weighted\":\"YieldPortfolio\"}))\n",
+    "    \n",
+    "#     return port\n",
+    "\n",
+    "def collapse_varieties_to_crop(y_norm):\n",
+    "    \"\"\"\n",
+    "    One row per (Municipality, Year, Crop), combining all varieties.\n",
+    "    Prefer acreage-weighted mean of YieldNorm; fallback to simple mean if Acres missing.\n",
+    "    \"\"\"\n",
+    "    y = y_norm.copy()\n",
+    "    y[\"Acres\"] = pd.to_numeric(y[\"Acres\"], errors=\"coerce\")\n",
+    "\n",
+    "    def agg(group):\n",
+    "        yn = group[\"YieldNorm\"].astype(float)\n",
+    "        w  = group[\"Acres\"].fillna(0).astype(float)\n",
+    "        if w.sum() > 0:\n",
+    "            val = (yn * w).sum() / w.sum()\n",
+    "        else:\n",
+    "            val = yn.mean()  # no acres → simple mean across varieties\n",
+    "        return pd.Series({\"YieldNormCrop\": val})\n",
+    "\n",
+    "    crop_level = (y.groupby([\"Municipality\",\"Year\",\"Crop\"], as_index=False)\n",
+    "                    .apply(agg)\n",
+    "                    .reset_index(drop=True))\n",
+    "    return crop_level\n",
+    "\n",
     "def build_portfolio_yield(y_norm, weights):\n",
-    "    \"\"\"\n",
-    "    Portfolio yield for every Municipality and Year:\n",
-    "    Y^{mix}_{i,t} = sum_c w_{i,c} * y'_{i,t,c}\n",
-    "    where y' is min–max normalized per Crop and w_{i,c} are the 5-year acreage shares.\n",
-    "    \"\"\"\n",
-    "    m = y_norm.merge(weights, on=[\"Municipality\",\"Crop\"], how=\"inner\")\n",
-    "    port = (m.assign(weighted=lambda df: df[\"YieldNorm\"] * df[\"Weight\"])\n",
+    "    # 1) collapse to crop-level first (no duplicate varieties)\n",
+    "    y_crop = collapse_varieties_to_crop(y_norm)\n",
+    "    # 2) merge crop-level with weights (one row per muni-crop)\n",
+    "    m = y_crop.merge(weights, on=[\"Municipality\",\"Crop\"], how=\"inner\")\n",
+    "    # 3) weighted sum over crops per (Municipality, Year)\n",
+    "    port = (m.assign(weighted=lambda df: df[\"YieldNormCrop\"] * df[\"Weight\"])\n",
     "              .groupby([\"Municipality\",\"Year\"], as_index=False)[\"weighted\"].sum()\n",
     "              .rename(columns={\"weighted\":\"YieldPortfolio\"}))\n",
+    "    # 4) numerical safety\n",
+    "    port[\"YieldPortfolio\"] = port[\"YieldPortfolio\"]\n",
     "    return port\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 164,
    "id": "d66f35ff",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_45700\\3504702320.py:81: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  .apply(agg)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -394,31 +451,31 @@
        "      <th>0</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1996</td>\n",
-       "      <td>0.881975</td>\n",
+       "      <td>0.381934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1997</td>\n",
-       "      <td>1.025025</td>\n",
+       "      <td>0.359387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1998</td>\n",
-       "      <td>0.822130</td>\n",
+       "      <td>0.365427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1999</td>\n",
-       "      <td>1.075027</td>\n",
+       "      <td>0.415961</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>2000</td>\n",
-       "      <td>0.723669</td>\n",
+       "      <td>0.279473</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -426,14 +483,14 @@
       ],
       "text/plain": [
        "  Municipality  Year  YieldPortfolio\n",
-       "0    ALEXANDER  1996        0.881975\n",
-       "1    ALEXANDER  1997        1.025025\n",
-       "2    ALEXANDER  1998        0.822130\n",
-       "3    ALEXANDER  1999        1.075027\n",
-       "4    ALEXANDER  2000        0.723669"
+       "0    ALEXANDER  1996        0.381934\n",
+       "1    ALEXANDER  1997        0.359387\n",
+       "2    ALEXANDER  1998        0.365427\n",
+       "3    ALEXANDER  1999        0.415961\n",
+       "4    ALEXANDER  2000        0.279473"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,20 +505,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "id": "0ecbf606",
    "metadata": {},
    "outputs": [],
    "source": [
-    "YEARS = range(1996, 2012) # 1996–2011\n",
     "GROW_START, GROW_END = (\"05-01\", \"10-31\")   # May–Oct\n",
     "\n",
     "def parse_date_us_2digit_year(s):\n",
     "    # Robustly parse strings like \"1/1/96\" -> 1996-01-01\n",
     "    return pd.to_datetime(s, format=\"%m/%d/%y\", errors=\"coerce\")\n",
     "\n",
-    "def load_era(e):\n",
-    "    e.columns = [c.strip() for c in e.columns]\n",
+    "def load_weather(e):\n",
     "    # Parse date\n",
     "    e[\"__date\"] = parse_date_us_2digit_year(e[\"Date/Time\" ])\n",
     "\n",
@@ -475,7 +530,7 @@
     "\n",
     "    return e\n",
     "\n",
-    "def era_indices(e,\n",
+    "def weather_indices(e,\n",
     "                thresholds=dict(hot=30.0, frost=0.0, wet=0.001, gdd_base=5.0, gdd_cap=30.0)):\n",
     "    \"\"\"\n",
     "    Build annual (Municipality, Year) indices for May–Oct:\n",
@@ -523,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 166,
    "id": "5123edfd",
    "metadata": {},
    "outputs": [
@@ -664,20 +719,20 @@
        "4  0.888865  0.043473  1813.705321            2            161          125  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "era_idx_raw = era_indices(df_weather)\n",
-    "era_idx_raw.to_csv(OUTDIR / \"era_indices_raw.csv\", index=False)\n",
-    "era_idx_raw.head()"
+    "weather_idx_raw = weather_indices(df_weather)\n",
+    "weather_idx_raw.to_csv(OUTDIR / \"weather_indices_raw.csv\", index=False)\n",
+    "weather_idx_raw.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 167,
    "id": "9b1ee59e",
    "metadata": {},
    "outputs": [
@@ -723,7 +778,7 @@
        "      <th>0</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1996</td>\n",
-       "      <td>0.881975</td>\n",
+       "      <td>0.381934</td>\n",
        "      <td>-2.231028</td>\n",
        "      <td>-37.795774</td>\n",
        "      <td>5.486426</td>\n",
@@ -740,7 +795,7 @@
        "      <th>1</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1997</td>\n",
-       "      <td>1.025025</td>\n",
+       "      <td>0.359387</td>\n",
        "      <td>-0.277886</td>\n",
        "      <td>-32.508271</td>\n",
        "      <td>7.448730</td>\n",
@@ -757,7 +812,7 @@
        "      <th>2</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1998</td>\n",
-       "      <td>0.822130</td>\n",
+       "      <td>0.365427</td>\n",
        "      <td>1.876897</td>\n",
        "      <td>-28.898511</td>\n",
        "      <td>9.551834</td>\n",
@@ -774,7 +829,7 @@
        "      <th>3</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>1999</td>\n",
-       "      <td>1.075027</td>\n",
+       "      <td>0.415961</td>\n",
        "      <td>1.274463</td>\n",
        "      <td>-30.357541</td>\n",
        "      <td>8.904040</td>\n",
@@ -791,7 +846,7 @@
        "      <th>4</th>\n",
        "      <td>ALEXANDER</td>\n",
        "      <td>2000</td>\n",
-       "      <td>0.723669</td>\n",
+       "      <td>0.279473</td>\n",
        "      <td>0.006244</td>\n",
        "      <td>-30.738687</td>\n",
        "      <td>7.698553</td>\n",
@@ -810,11 +865,11 @@
       ],
       "text/plain": [
        "  Municipality  Year  YieldPortfolio  Tmin_mean   Tmin_min  Tmax_mean  \\\n",
-       "0    ALEXANDER  1996        0.881975  -2.231028 -37.795774   5.486426   \n",
-       "1    ALEXANDER  1997        1.025025  -0.277886 -32.508271   7.448730   \n",
-       "2    ALEXANDER  1998        0.822130   1.876897 -28.898511   9.551834   \n",
-       "3    ALEXANDER  1999        1.075027   1.274463 -30.357541   8.904040   \n",
-       "4    ALEXANDER  2000        0.723669   0.006244 -30.738687   7.698553   \n",
+       "0    ALEXANDER  1996        0.381934  -2.231028 -37.795774   5.486426   \n",
+       "1    ALEXANDER  1997        0.359387  -0.277886 -32.508271   7.448730   \n",
+       "2    ALEXANDER  1998        0.365427   1.876897 -28.898511   9.551834   \n",
+       "3    ALEXANDER  1999        0.415961   1.274463 -30.357541   8.904040   \n",
+       "4    ALEXANDER  2000        0.279473   0.006244 -30.738687   7.698553   \n",
        "\n",
        "    Tmax_max  Tmean_mean  Ptot_sum  Ptot_max      GDD_sum  HotDays_sum  \\\n",
        "0  34.526901    1.627699  0.777780  0.047799  1786.386633            5   \n",
@@ -831,15 +886,15 @@
        "4            161          125  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_era = y_port.merge(era_idx_raw, on=[\"Municipality\",\"Year\"], how=\"inner\")\n",
-    "dataset_era.to_csv(OUTDIR / \"dataset_era.csv\", index=False)\n",
-    "dataset_era.head()"
+    "yields_weather = y_port.merge(weather_idx_raw, on=[\"Municipality\",\"Year\"], how=\"inner\")\n",
+    "yields_weather.to_csv(OUTDIR / \"yields_weather.csv\", index=False)\n",
+    "yields_weather.head()"
    ]
   }
  ],
