filter for municipality+crop combo in process

--- a/Manitoba/data_process.ipynb
+++ b/Manitoba/data_process.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "42f58525",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "484e6aac",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "4   535.0       0.184  1  1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "d4b054e2",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "4 -1.370000e-10  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "4baa6be7",
    "metadata": {},
    "outputs": [],
@@ -365,12 +365,6 @@
     "    \"\"\"\n",
     "    y = df.copy()\n",
     "    y.columns = y.columns.str.strip()\n",
-    "\n",
-    "    # Required columns check\n",
-    "    required = {\"Year\", \"Municipality\", \"Crop\", \"Yield/Acre\"}\n",
-    "    missing = required - set(y.columns)\n",
-    "    if missing:\n",
-    "        raise ValueError(f\"Missing required columns in Yields.csv: {sorted(missing)}\")\n",
     "\n",
     "    # Types\n",
     "    y[\"Year\"] = pd.to_numeric(y[\"Year\"], errors=\"coerce\")\n",
@@ -410,7 +404,19 @@
     "\n",
     "    out = grouped[[\"Year\", \"Municipality\", \"Crop\", \"Mean_Yield\"]].copy()\n",
     "    out[\"Year\"] = out[\"Year\"].astype(int)\n",
-    "    return out\n"
+    "    return out\n",
+    "\n",
+    "def filter_yields_by_combo(df, number_years=YEARS):\n",
+    "    # Filter to Municipality x Crop combos with number_years=16 years of data\n",
+    "    counts = (\n",
+    "        df\n",
+    "        .groupby([\"Municipality\", \"Crop\"], as_index=False)\n",
+    "        .size()\n",
+    "        .rename(columns={\"size\": \"n_years\"})\n",
+    "    )\n",
+    "    valid_combos = counts[counts[\"n_years\"] == len(number_years)][[\"Municipality\", \"Crop\"]]\n",
+    "    df = df.merge(valid_combos, on=[\"Municipality\", \"Crop\"], how=\"inner\")\n",
+    "    return df"
    ]
   },
   {
@@ -423,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d66f35ff",
    "metadata": {},
    "outputs": [
@@ -432,7 +438,8 @@
      "output_type": "stream",
      "text": [
       "Prepared yields_by_crop: (14476, 4)\n",
-      "Unique key check (Year, Municipality, Crop): 0\n"
+      "Unique key check (Year, Municipality, Crop): 0\n",
+      "Filtered yields_by_crop to full data combos: (5984, 4)\n"
      ]
     },
     {
@@ -474,44 +481,44 @@
        "      <th>1</th>\n",
        "      <td>1996</td>\n",
        "      <td>ALEXANDER</td>\n",
-       "      <td>BARLEY</td>\n",
-       "      <td>1.607000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1996</td>\n",
-       "      <td>ALEXANDER</td>\n",
-       "      <td>CANARYSEED</td>\n",
-       "      <td>0.184000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1996</td>\n",
-       "      <td>ALEXANDER</td>\n",
        "      <td>OATS</td>\n",
        "      <td>1.215000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>ALONSA</td>\n",
+       "      <td>ALFALFA/GRASS MIX.</td>\n",
+       "      <td>1.609253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>ARGYLE</td>\n",
+       "      <td>ALFALFA</td>\n",
+       "      <td>2.080575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1996</td>\n",
-       "      <td>ALEXANDER</td>\n",
-       "      <td>POLISH CANOLA</td>\n",
-       "      <td>0.278000</td>\n",
+       "      <td>ARGYLE</td>\n",
+       "      <td>ALFALFA/GRASS MIX.</td>\n",
+       "      <td>1.658000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year Municipality              Crop  Mean_Yield\n",
-       "0  1996    ALEXANDER  ARGENTINE CANOLA    0.728428\n",
-       "1  1996    ALEXANDER            BARLEY    1.607000\n",
-       "2  1996    ALEXANDER        CANARYSEED    0.184000\n",
-       "3  1996    ALEXANDER              OATS    1.215000\n",
-       "4  1996    ALEXANDER     POLISH CANOLA    0.278000"
+       "   Year Municipality                Crop  Mean_Yield\n",
+       "0  1996    ALEXANDER    ARGENTINE CANOLA    0.728428\n",
+       "1  1996    ALEXANDER                OATS    1.215000\n",
+       "2  1996       ALONSA  ALFALFA/GRASS MIX.    1.609253\n",
+       "3  1996       ARGYLE             ALFALFA    2.080575\n",
+       "4  1996       ARGYLE  ALFALFA/GRASS MIX.    1.658000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +527,10 @@
     "yields_by_crop = prepare_yields_year_muni_crop(df_yields)\n",
     "\n",
     "print(\"Prepared yields_by_crop:\", yields_by_crop.shape)\n",
-    "print(\"Unique key check (Year, Municipality, Crop):\", yields_by_crop.duplicated([\"Year\",\"Municipality\",\"Crop\"]).sum())\n",
+    "print(\"Unique key check (Year, Municipality, Crop):\", yields_by_crop.duplicated([\"Year\",\"Municipality\",\"Crop\"]).sum()) # should be 0\n",
+    "\n",
+    "yields_by_crop = filter_yields_by_combo(yields_by_crop, number_years=YEARS)\n",
+    "print(\"Filtered yields_by_crop to full data combos:\", yields_by_crop.shape)\n",
     "\n",
     "yields_by_crop.to_csv(OUTDIR / \"yields_by_crop.csv\", index=False)\n",
     "yields_by_crop.head()\n"
@@ -536,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "554e0287",
    "metadata": {},
    "outputs": [],
@@ -676,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "5123edfd",
    "metadata": {},
    "outputs": [
@@ -896,7 +906,7 @@
        "[5 rows x 98 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "9b1ee59e",
    "metadata": {},
    "outputs": [
@@ -926,7 +936,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged yields + weather: (11721, 100)\n"
+      "Merged yields + weather: (4864, 100)\n"
      ]
     },
     {
@@ -982,8 +992,8 @@
        "      <td>0.728428</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.406025</td>\n",
-       "      <td>32.70173</td>\n",
-       "      <td>41.1665</td>\n",
+       "      <td>32.701730</td>\n",
+       "      <td>41.166500</td>\n",
        "      <td>31.423716</td>\n",
        "      <td>15.575997</td>\n",
        "      <td>...</td>\n",
@@ -1002,12 +1012,12 @@
        "      <th>1</th>\n",
        "      <td>1996</td>\n",
        "      <td>ALEXANDER</td>\n",
-       "      <td>BARLEY</td>\n",
-       "      <td>1.607000</td>\n",
+       "      <td>OATS</td>\n",
+       "      <td>1.215000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.406025</td>\n",
-       "      <td>32.70173</td>\n",
-       "      <td>41.1665</td>\n",
+       "      <td>32.701730</td>\n",
+       "      <td>41.166500</td>\n",
        "      <td>31.423716</td>\n",
        "      <td>15.575997</td>\n",
        "      <td>...</td>\n",
@@ -1025,15 +1035,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1996</td>\n",
-       "      <td>ALEXANDER</td>\n",
-       "      <td>CANARYSEED</td>\n",
-       "      <td>0.184000</td>\n",
+       "      <td>ALONSA</td>\n",
+       "      <td>ALFALFA/GRASS MIX.</td>\n",
+       "      <td>1.609253</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.406025</td>\n",
-       "      <td>32.70173</td>\n",
-       "      <td>41.1665</td>\n",
-       "      <td>31.423716</td>\n",
-       "      <td>15.575997</td>\n",
+       "      <td>2.014729</td>\n",
+       "      <td>37.197368</td>\n",
+       "      <td>35.920028</td>\n",
+       "      <td>39.128350</td>\n",
+       "      <td>18.739317</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1049,15 +1059,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1996</td>\n",
-       "      <td>ALEXANDER</td>\n",
-       "      <td>OATS</td>\n",
-       "      <td>1.215000</td>\n",
+       "      <td>ARGYLE</td>\n",
+       "      <td>ALFALFA</td>\n",
+       "      <td>2.080575</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.406025</td>\n",
-       "      <td>32.70173</td>\n",
-       "      <td>41.1665</td>\n",
-       "      <td>31.423716</td>\n",
-       "      <td>15.575997</td>\n",
+       "      <td>0.152813</td>\n",
+       "      <td>24.440870</td>\n",
+       "      <td>34.404783</td>\n",
+       "      <td>27.131971</td>\n",
+       "      <td>17.745561</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1073,15 +1083,15 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1996</td>\n",
-       "      <td>ALEXANDER</td>\n",
-       "      <td>POLISH CANOLA</td>\n",
-       "      <td>0.278000</td>\n",
+       "      <td>ARGYLE</td>\n",
+       "      <td>ALFALFA/GRASS MIX.</td>\n",
+       "      <td>1.658000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.406025</td>\n",
-       "      <td>32.70173</td>\n",
-       "      <td>41.1665</td>\n",
-       "      <td>31.423716</td>\n",
-       "      <td>15.575997</td>\n",
+       "      <td>0.152813</td>\n",
+       "      <td>24.440870</td>\n",
+       "      <td>34.404783</td>\n",
+       "      <td>27.131971</td>\n",
+       "      <td>17.745561</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1100,19 +1110,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year Municipality              Crop  Mean_Yield  05_Q1_CDD  05_Q2_CDD  \\\n",
-       "0  1996    ALEXANDER  ARGENTINE CANOLA    0.728428        0.0   1.406025   \n",
-       "1  1996    ALEXANDER            BARLEY    1.607000        0.0   1.406025   \n",
-       "2  1996    ALEXANDER        CANARYSEED    0.184000        0.0   1.406025   \n",
-       "3  1996    ALEXANDER              OATS    1.215000        0.0   1.406025   \n",
-       "4  1996    ALEXANDER     POLISH CANOLA    0.278000        0.0   1.406025   \n",
+       "   Year Municipality                Crop  Mean_Yield  05_Q1_CDD  05_Q2_CDD  \\\n",
+       "0  1996    ALEXANDER    ARGENTINE CANOLA    0.728428        0.0   1.406025   \n",
+       "1  1996    ALEXANDER                OATS    1.215000        0.0   1.406025   \n",
+       "2  1996       ALONSA  ALFALFA/GRASS MIX.    1.609253        0.0   2.014729   \n",
+       "3  1996       ARGYLE             ALFALFA    2.080575        0.0   0.152813   \n",
+       "4  1996       ARGYLE  ALFALFA/GRASS MIX.    1.658000        0.0   0.152813   \n",
        "\n",
        "   06_Q1_CDD  06_Q2_CDD  07_Q1_CDD  07_Q2_CDD  ...  06_Q1_Total Snow  \\\n",
-       "0   32.70173    41.1665  31.423716  15.575997  ...               0.0   \n",
-       "1   32.70173    41.1665  31.423716  15.575997  ...               0.0   \n",
-       "2   32.70173    41.1665  31.423716  15.575997  ...               0.0   \n",
-       "3   32.70173    41.1665  31.423716  15.575997  ...               0.0   \n",
-       "4   32.70173    41.1665  31.423716  15.575997  ...               0.0   \n",
+       "0  32.701730  41.166500  31.423716  15.575997  ...               0.0   \n",
+       "1  32.701730  41.166500  31.423716  15.575997  ...               0.0   \n",
+       "2  37.197368  35.920028  39.128350  18.739317  ...               0.0   \n",
+       "3  24.440870  34.404783  27.131971  17.745561  ...               0.0   \n",
+       "4  24.440870  34.404783  27.131971  17.745561  ...               0.0   \n",
        "\n",
        "   06_Q2_Total Snow  07_Q1_Total Snow  07_Q2_Total Snow  08_Q1_Total Snow  \\\n",
        "0               0.0               0.0               0.0               0.0   \n",
@@ -1138,7 +1148,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "e53bddda",
    "metadata": {},
    "outputs": [
@@ -1202,11 +1212,11 @@
       "PCA used 96 variables.\n",
       "Top cumulative variance:\n",
       "  component  explained_variance_ratio  explained_variance_ratio_cum\n",
-      "0       PC1                  0.225778                      0.225778\n",
-      "1       PC2                  0.126898                      0.352676\n",
-      "2       PC3                  0.097227                      0.449903\n",
-      "3       PC4                  0.085986                      0.535889\n",
-      "4       PC5                  0.066469                      0.602359\n"
+      "0       PC1                  0.220062                      0.220062\n",
+      "1       PC2                  0.125584                      0.345646\n",
+      "2       PC3                  0.099381                      0.445028\n",
+      "3       PC4                  0.088849                      0.533877\n",
+      "4       PC5                  0.068361                      0.602237\n"
      ]
     }
    ],
