--- a/Manitoba/yield_models_comparison.ipynb
+++ b/Manitoba/yield_models_comparison.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "da7f9c0b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "ab47451a",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "171c3346",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "2ea87d5e",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4c009e38",
    "metadata": {},
    "outputs": [],
@@ -377,14 +377,13 @@
     "# === Preprocessing blocks ===\n",
     "\n",
     "numeric_imputer = SimpleImputer(strategy=\"median\")\n",
-    "categorical_imputer = SimpleImputer(strategy=\"most_frequent\")\n",
     "\n",
     "categorical_encoder = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
     "\n",
     "preprocess_for_linear = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"num\", Pipeline([(\"impute\", numeric_imputer), (\"scale\", StandardScaler())]), num_cols),\n",
-    "        (\"cat\", Pipeline([(\"impute\", categorical_imputer), (\"onehot\", categorical_encoder)]), cat_cols),\n",
+    "        (\"cat\", Pipeline([(\"onehot\", categorical_encoder)]), cat_cols),\n",
     "    ],\n",
     "    remainder=\"drop\",\n",
     ")\n",
@@ -392,7 +391,7 @@
     "preprocess_for_rf = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"num\", Pipeline([(\"impute\", numeric_imputer)]), num_cols),\n",
-    "        (\"cat\", Pipeline([(\"impute\", categorical_imputer), (\"onehot\", categorical_encoder)]), cat_cols),\n",
+    "        (\"cat\", Pipeline([(\"onehot\", categorical_encoder)]), cat_cols),\n",
     "    ],\n",
     "    remainder=\"drop\",\n",
     ")\n"
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "8ea76861",
    "metadata": {},
    "outputs": [
@@ -425,7 +424,7 @@
        "['OLS', 'Ridge', 'Random Forest', 'Ridge + PCA']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +462,7 @@
     "prep_ridge_pca = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"num_pca\", numeric_pca, num_cols),\n",
-    "        (\"cat\", Pipeline([(\"impute\", categorical_imputer), (\"onehot\", categorical_encoder)]), cat_cols),\n",
+    "        (\"cat\", Pipeline([ (\"onehot\", categorical_encoder)]), cat_cols),\n",
     "    ],\n",
     "    remainder=\"drop\",\n",
     ")\n",
@@ -485,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "11056bf1",
    "metadata": {},
    "outputs": [
@@ -552,7 +551,7 @@
        "Ridge + PCA    0.901717  0.424562  0.180253"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "3a388c53",
    "metadata": {},
    "outputs": [
@@ -633,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "0df2eefa",
    "metadata": {},
    "outputs": [
@@ -661,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "7ef1391c",
    "metadata": {},
    "outputs": [
@@ -731,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f030f0a9",
    "metadata": {},
    "outputs": [
